--- a/apps/web-components-example/index.html
+++ b/apps/web-components-example/index.html
@@ -122,7 +122,7 @@
         <tui-text type="q" cite="https://source-of-the-quote.example.com"
           >Inline quotation with cite</tui-text
         >
-        <tui-text type="s">Strikethroug</tui-text>
+        <tui-text type="s">Strikethrough</tui-text>
         <tui-text type="samp">Sample output</tui-text>
         <tui-text type="small">Side comment</tui-text>
         <tui-text type="span">Content span</tui-text>
