feat: add Prose component

--- a/apps/web-components-example/index.html
+++ b/apps/web-components-example/index.html
@@ -76,6 +76,14 @@
       </tui-stack>
 
       <tui-stack>
+        <tui-heading level="2">Prose</tui-heading>
+        <tui-prose>
+          <tui-paragraph>Paragraph</tui-paragraph>
+          <tui-paragraph>Paragraph</tui-paragraph>
+        </tui-prose>
+      </tui-stack>
+
+      <tui-stack>
         <tui-heading level="2">Stack</tui-heading>
         <tui-stack>
           <span>Vertical</span>
